--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,23 @@
     height: 150px;
     width: 299px;
   }
+  li {
+    font-size: 2rem;
+  }
+  p{
+    font-size: 2rem;
+  }
+  input{
+    height: 3rem;
+    width: 3rem;
+  }
+  label{
+    font-size: 2rem;
+  }
+  .downarrows {
+    width: 0px;
+    height:0px;
+  }
 }
 
 @media (max-width: 1024px) {
@@ -35,6 +52,7 @@
   .birthday {
     font-size: 1rem;
   }
+
 }
 
 
@@ -44,6 +62,7 @@
     left: 2rem;
     top: 5rem;
   }
+
 }
 
 /* IDs */
