--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,7 @@
     font-size: 1.1rem;
   }
   p{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
   }
   input{
     height: 2.5rem;
@@ -33,6 +33,9 @@
   .downarrows {
     width: 0px;
     height:0px;
+  }
+  .step {
+    font-size: 1.4rem;
   }
 }
 
