--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,28 @@
   text-align: center;
 }
 
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  left: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #71c9ce;
+  font-weight: bold;
+  color: #59405c;
+  cursor: loading;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  color: #9f36ad;
+  text-decoration: overline;
+}
+
 /* Selectors */
 
 .wrs:hover {
@@ -158,6 +180,24 @@ iframe {
   text-align: right;
   padding-right: 1rem;
   list-style-type:none;
+}
+
+
+.top {
+  place-self:end;
+  position:sticky;
+  bottom:20px;
+  margin-right:20px;
+  margin-top:100vh;
+  
+  /* visual styling */
+  text-decoration: none;
+  padding: 10px;
+  font-family: sans-serif;
+  color: #fff;
+  background: #000;
+  border-radius: 100px;
+  white-space:nowrap;
 }
 
 .regdis {
@@ -506,13 +546,6 @@ iframe {
 .caaar {
   padding: 3% 0 3%;
 }
-
-/* .reg_header {
-  text-align: center;
-  color: #59405c;
-  background-color: #cefff1;
-  padding-top: 2%;
-} */
 
 .reg {
   color: #fff;
