--- a/css/styles.css
+++ b/css/styles.css
@@ -169,6 +169,7 @@
 
 iframe {
   padding: 0 1% 1%;
+  border-radius: 2rem;
 }
 
 
@@ -206,7 +207,8 @@ iframe {
 
 .body {
   text-align: center;
-  background-color: #cefff1;
+  /* background-color: #cefff1; */
+  background: radial-gradient(#cefff1, #88f0e7);
   max-width: 100%;
 }
 
@@ -228,6 +230,10 @@ iframe {
   left: 22.8rem;
 }
 
+.grads {
+  border-radius: 3rem;
+}
+
 .Termsandservicehover {
   color: green;
 }
@@ -239,7 +245,10 @@ iframe {
   width: 38%;
   padding: -50rem;
   margin-top: -15rem;
+}
 
+.hvr-shrink{
+  border-radius: 1.5rem;
 }
 
 .wrs {
@@ -421,6 +430,7 @@ iframe {
 .circle {
   padding-bottom: 1rem;
   text-align: center;
+  border-radius: 3rem;
 }
 
 .grads {
@@ -462,8 +472,8 @@ iframe {
   width: 60%;
   margin-bottom: 4%;
   color: rgb(14, 133, 133);
-
 }
+
 
 .verifybutton {
     clear: both;
@@ -555,6 +565,8 @@ iframe {
 .classes {
   text-align: right;
   margin: 2rem;
+  font-size: 1rem;
+  font-weight: 450;
 }
 
 .glow {
@@ -821,7 +833,7 @@ iframe {
   justify-content: center;
   align-items: center;
   width: 98%;
-  height: 100%;
+  height: 80%;
   font-family: Lato, sans-serif;
   font-size: 1rem;
   text-transform: uppercase;
@@ -906,3 +918,40 @@ iframe {
 
         
 
+
+#shadowBox {
+  /* background-color: rgb(0, 0, 0); */
+  /* Fallback color */
+  /* background-color: rgba(0, 0, 0, 0.815) */
+  /* Black w/opacity/see-through */
+  /* border: 3px solid; */
+}
+
+.rainbow {
+  text-align: center;
+  /* text-decoration: underline; */
+  font-size: 1.5rem;
+  margin-right: 1rem;
+  padding-bottom: -1rem;
+  margin-bottom: -0.0rem;
+  /* font-family: monospace; */
+  /* letter-spacing: 5px; */
+}
+.rainbow_text_animated {
+  background: linear-gradient(to right, #0a3ad6, #0941f865, navy);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  animation: rainbow_animation 4s ease-in-out infinite;
+  background-size: 400% 100%;
+}
+
+@keyframes rainbow_animation {
+  0%,100% {
+      background-position: 0 0;
+  }
+
+  50% {
+      background-position: 100% 0;
+  }
+}
