--- a/css/styles.css
+++ b/css/styles.css
@@ -314,6 +314,24 @@ iframe {
   border-radius: 5%;
 }
 
+.recent_projects {
+  background: radial-gradient(#98eac4, #5beea0);
+  /* background: radial-gradient(#15c165, #65e8aa); */
+  box-shadow: 0 30px 40px rgba(0,0,0,.1);
+}
+
+.teacher_meet {
+  background: radial-gradient(#eeeca9, #ebef74);
+  /* background: radial-gradient(#15c165, #65e8aa); */
+  box-shadow: 0 30px 40px rgba(0,0,0,.1);
+}
+
+.picture_background {
+  background: radial-gradient(#efc1f1, #e98ad9);
+  /* background: radial-gradient(#15c165, #65e8aa); */
+  box-shadow: 0 30px 40px rgba(0,0,0,.1);
+}
+
 .cm {
   background-color: #cefff1;
   /* background-color: #006a71; */
@@ -427,6 +445,10 @@ iframe {
   position: sticky;
 }
 
+.vn {
+  text-align: left;
+}
+
 .circle {
   padding-bottom: 1rem;
   text-align: center;
@@ -434,8 +456,8 @@ iframe {
 }
 
 .grads {
-  height: 25%;
-  width: 25%;
+  height: 67vh;
+  width: 45vh;
 }
 
 
@@ -470,7 +492,7 @@ iframe {
   border: dotted 10px;
   border-bottom: none;
   width: 60%;
-  margin-bottom: 4%;
+  margin: auto auto;
   color: rgb(14, 133, 133);
 }
 
@@ -538,7 +560,7 @@ iframe {
 
 .power {
   color: #231E23;
-  padding: 0.5rem 0.3rem 0.5rem;
+  /* padding: 0.5rem 0.3rem 0.5rem; */
 }
 
 .mbtn {
